chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,5 @@
-# Python
+*.pyc
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-env/
-.venv
 .env
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Project specific
+venv/
 logs/
-.cache/
-*.log
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-
-# Distribution
-dist/
-build/
-*.egg-info/
